--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -55,7 +55,7 @@ p {
     --primary-black : #000000;
     --primary-white : #FFFFFF;
 }
-
+/* ---------------------------------CSS : PAGE HOME (ligne 58 à 665)----------------------------------- */
 /* --BARRE DE NAVIGATION-- */
 nav {
     background-color: var(--primary-red);
@@ -663,3 +663,7 @@ footer {
         opacity: 0.8;
     }
 }
+/* ---------------------------------CSS : PAGE A PROPOS----------------------------------- */
+/* ---------------------------------CSS : PAGE ADVERSAIRES----------------------------------- */
+/* ---------------------------------CSS : PAGE HEROS----------------------------------- */
+/* ---------------------------------CSS : PAGE BONUS----------------------------------- */
