--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -565,7 +565,6 @@ footer {
     align-self: center;
 }
 
-/* INPUT DESKTOP*/
 
 .footer-1mobile   .part-2mobile input {
     background-color: var(--primary-red);
@@ -579,7 +578,7 @@ footer {
     opacity: 0.6;
     padding: 0;
     width: auto;
-    /* Remarque : pour colorer le stroke = petite flèche bas, j'ai modifier la ligne 2424 dans bootstrap */
+    /* Remarque : pour colorer le stroke = petite flèche bas, j'ai modifié la ligne 2424 dans bootstrap */
 }
 
 /* INPUT RESPONSIVE */
@@ -617,13 +616,6 @@ footer {
 
 }
 
-@media (max-width: 575.98px) {
-   
-    .footer-1mobile   .part-2mobile input{
-        background-color: var(--primary-red);
-        border-radius: 16px; 
-    }
-}
 
 /* ICONES DE RESEAUX SOCIAUX */
 
@@ -665,7 +657,7 @@ footer {
 }
 /* ---------------------------------CSS : PAGE A PROPOS----------------------------------- */
 /* ---------------------------------CSS : PAGE ADVERSAIRES----------------------------------- */
-/* ---------------------------------CSS : PAGE HEROS----------------------------------- */
+/* ---------------------------------CSS : PAGE BONUS (ligne 668 à 718)----------------------------------- */
 .heros-cont {
     background-image: url(../Illustration/img-35.png);
     background-repeat: no-repeat;
@@ -716,4 +708,113 @@ footer {
         display: none;
     }
 }
-/* ---------------------------------CSS : PAGE BONUS----------------------------------- */
+/* ---------------------------------CSS : PAGE HEROS----------------------------------- */
+/* --BARRE DE NAVIGATION-- */
+.nav-heros {
+    background-color: var(--primary-dark-blue);
+    font-family: 'font-1R';
+}
+@media (max-width: 576px) { 
+    .nav-heros {
+        background-color: var(--primary-dark-blue);
+    }
+}
+
+/* FOOTER */
+.footer-heros {
+    background-color: var(--primary-black);
+}
+/* FOOTER 1 DESKTOP */
+/* BOUTONS DE NAVIGATION */
+
+.footer-1desktop-heros  .part-1desktop-heros a, .footer-1desktop-heros .part-2desktop-heros a {
+    text-decoration: none;
+    color: var(--primary-white);
+    font-size: 1vw;
+    opacity: 0.9;
+}
+
+/* INPUT DESKTOP*/
+
+.footer-1desktop-heros  .part-2desktop-heros input {
+    background-color: var(--primary-dark-blue);
+    border-radius: 16px; 
+}
+
+.footer-1desktop-heros  .part-2desktop-heros input::placeholder{
+    color: var(--primary-white);
+    font-size: 1vw;
+    opacity: 0.5;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+}
+
+
+.footer-1mobile-heros   .part-2mobile-heros input {
+    background-color: var(--primary-dark-blue);
+    border-radius: 16px; 
+    width: 100%;
+    border: none;
+}
+.footer-1mobile-heros   .part-2mobile-heros input::placeholder {
+    color: var(--primary-white);
+    font-size: 3.5vw;
+    opacity: 0.6;
+    padding: 0;
+    width: auto;
+    /* Remarque : pour colorer le stroke = petite flèche bas, j'ai modifié la ligne 2424 dans bootstrap */
+}
+
+/* INPUT RESPONSIVE */
+
+@media (max-width: 576px) {
+    .footer-1desktop-heros {
+        display: none;
+    }
+    .footer-1mobile-heros  .part-1mobile-heros a, .footer-1mobile-heros .part-2mobile-heros a {
+        text-decoration: none;
+        color: var(--primary-white);
+        font-size: 2.5vw;
+        opacity: 0.9;
+    }
+    .footer-1mobile-heros   .part-2mobile input {
+        background-color: var(--primary-dark-blue);
+        border-radius: 16px; 
+        width: 80%;
+    }
+}
+
+/* LOGOS */
+
+
+@media (min-width: 576px) {
+    .part-logomobile-heros {
+        display: none;
+    }
+    .footer-1mobile-heros {
+        display: none;
+    }
+    .footer-2mobile-heros {
+    display: none;
+    }
+
+}
+
+
+/* ICONES DE RESEAUX SOCIAUX */
+
+.rounded-circle-heros {
+    background-color: var(--primary-dark-blue);
+    width: 3%;
+    padding: 3px;
+    margin: 0.50%;
+}
+@media (max-width: 576px) {
+    .rounded-circle {
+        background-color: var(--primary-dark-blue);
+        width: 36px;
+        height: 32px;
+        padding: 8px;
+    }
+}
