--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -917,9 +917,10 @@ footer {
 }
 .spid-val-heros h2 {
     font-family: 'font-1B';
-    font-size: 1.2vw;
+    font-size: 1.4vw;
     color: var(--primary-white);
     opacity: 0.9;
+    margin-top: 20px;
 }
 @media (max-width: 576px) {
     .textes-cont-heros h2 {
@@ -932,6 +933,7 @@ footer {
 .spid-val-heros p {
     color: var(--primary-white);
     opacity: 0.9;
+    margin-top;
 }
 
 @media (max-width: 576px) {
@@ -1154,11 +1156,86 @@ footer {
     opacity: 0.7;
     padding-top: 25px;
 }
-/* FOOTER */
+
+/* UNIVERS HYPER RICHE */
+.spid-cont-hyper-riche {
+    background-image: url(../Illustration/img33.png);
+    background-size: cover;
+}
+@media (min-width: 576px) and (max-width: 899.98px) {
+    .spid-cont-hyper-riche {
+        background-size: cover;
+    }
+}
+/* PARTIE TEXTES */
+.spid-cont-hyper-riche .descrip {
+    width: 36%;
+    height: 100%;
+    background-color: var(--primary-dark-blue);
+    opacity: 0.8;
+    margin-left: 481px;
+    margin-top: 0px;
+    border-top-width: 10%;
+    padding-top: 40px;
+    margin-right: 10%;
+}
+@media (min-width: 576px) and (max-width: 899.98px) {
+    .spid-cont-hyper-riche .descrip {
+        margin-left: 320px;
+        padding-top: 10px;
+    }
+}
+
+/* LES TITRES */
+
+.spid-cont-hyper-riche h1 {
+    font-family: 'font-2';
+    font-size: 2.3vw;
+    color: var(--primary-white);
+    padding: -16px 24px 0px 24px;
+}
+@media (min-width: 576px) and (max-width: 899.98px) {
+    .spid-cont-hyper-riche h1 {
+        padding-top: 10px;
+    }
+}
+.spid-cont-hyper-riche h2{
+    font-family: 'font-1B';
+    color: var(--primary-white);
+    font-size: 1.5vw;
+    margin-bottom: 48px;
+    margin-top: -10px;
+    padding-top: 16px;
+}
+@media (min-width: 576px) and (max-width: 899.98px) {
+    .spid-cont-hyper-riche h2 {
+        padding-top: 10px;
+        margin-bottom: 10px;
+        margin-top: 0;
+    }
+}
+/* LE PARAGRAPHE */
+.spid-cont-hyper-riche p{
+    text-align: justify;
+    opacity: 0.8;
+    color: var(--primary-white);
+    padding-bottom: -2px;
+}
+@media (min-width: 576px) and (max-width: 899.98px) {
+    .spid-cont-hyper-riche p {
+        padding-bottom: 0px;
+        margin-bottom: 13px;
+    }
+}
+
+/*FOOTER */
 .footer-heros {
     background-color: var(--primary-black);
 }
 /* FOOTER 1 DESKTOP */
+.footer-1desktop-heros {
+    margin: 5% 0% auto;
+}
 /* BOUTONS DE NAVIGATION */
 
 .footer-1desktop-heros  .part-1desktop-heros a, .footer-1desktop-heros .part-2desktop-heros a {
@@ -1205,9 +1282,8 @@ footer {
 }
 @media (min-width: 576px) {
     .footer-2mobile-heros {
-    display: none;
+        display: none;
     }
-
 }
 /* INPUT RESPONSIVE */
 
@@ -1267,7 +1343,6 @@ footer {
 }
 @media (min-width: 576px) {
     .footer-2mobile-heros {
-    display: none;
+        display: none;
     }
-
 }
