--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -795,6 +795,11 @@ footer {
 }
 
 /* ---------------------------------CSS : PAGE BONUS (ligne 791 à 840)----------------------------------- */
+/* --BARRE DE NAVIGATION-- */
+.nav-bonus {
+    background-color: var(--primary-red);
+    font-family: 'font-1R';
+}
 .heros-cont {
     background-image: url(../Illustration/img-35.png);
     background-repeat: no-repeat;
@@ -1490,3 +1495,292 @@ footer {
 }
 
 /* ---------------------------------CSS : PAGE A PROPOS----------------------------------- */
+/* BARRE DE NAVIGATION */
+.nav-propos {
+    background-color: var(--primary-red);
+    font-family: 'font-1R';
+}
+/* PARTIE JAUNE : BANNIERE lA TOILE (VERSION MOBILE)*/
+.spid-cont-apropos-mobile {
+    background-color: var(--primary-yellow);
+    /* background-image: url(../Illustration/img-5.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: contain; */
+}
+@media (min-width: 576px) {
+    .spid-cont-apropos-mobile {
+        display: none;
+    }
+}
+/* IMAGE */
+.spid-cont-apropos-mobile img {
+    width: 100%;
+    /* height: 36vh; */
+}
+/* PARTIE JAUNE : BANNIERE lA TOILE (VERSION DESKTOP)*/
+.spid-cont-apropos-desktop {
+    background-color: var(--primary-yellow);
+    background-image: url(../Illustration/img-5.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: contain; 
+}
+@media (max-width: 575.98px) {
+    .spid-cont-apropos-desktop {
+        display: none;
+    }
+}
+
+/* LES TITRES */
+
+.spid-cont-apropos-desktop h1 {
+    font-family: 'font-2';
+    font-size: 5vw;
+    color: var(--primary-white);
+}
+@media (max-width: 576px) { 
+    
+    .spid-cont-apropos-mobile h1 {
+        font-size: 6vw;
+        font-family: 'font-2';
+        color: var(--primary-white);
+    }
+}
+.spid-cont-apropos-desktop h2 {
+    font-family: 'font-1B';
+    font-size: 1.7vw;
+    color: var(--primary-white);
+    margin-top: 3%;
+}
+/* PARTIE ROUGE : PETITE ANTENNE */
+.spid-cont-apropos-rouge {
+    background-color: var(--primary-red);
+}
+/* LE TITRE */
+.spid-cont-apropos-rouge h2 {
+    font-family: 'font-2';
+    font-size: 3vw;
+    color: var(--primary-white);
+    text-align: start;
+    padding-left: 5%;
+}
+@media (max-width: 575.98px) {
+    .spid-cont-apropos-rouge h2 {
+        text-align: center;
+        padding: 0%;
+    }
+}
+/* LE PARAGRAPHE */
+.spid-cont-apropos-rouge p {
+    font-family: 'font-1R';
+    font-size: 1.5vw;
+    color: var(--primary-white);
+    opacity: 0.8;
+    text-align: start;
+    padding-left: 5%;
+}
+@media (max-width: 575.98px) {
+    .spid-cont-apropos-rouge p {
+        text-align: center;
+        padding-left: 0%;
+    }
+}
+/* LE FORMULAIRE */
+/* LES INPUT */
+.spid-cont-apropos-rouge input {
+    border: 1px solid var(--primary-white);
+    border-radius: 16px;
+    margin-bottom: 12px;
+    background-color: transparent;
+    width: 85%;
+    height: auto;
+    opacity: 0.8;
+}
+@media (max-width: 575.98px) {
+    .spid-cont-apropos-rouge input {
+        border: 2px solid var(--primary-white);
+    }
+}
+.spid-cont-apropos-rouge input::placeholder {
+    padding-left: 6%;
+    color: var(--primary-white);
+    font-size: 1.5vw;
+    opacity: 0.8;
+    padding-top: 0px;
+    padding-bottom: 2px;
+    padding-top: 2px;
+}
+@media (max-width: 576px) {
+    .spid-cont-apropos-rouge input::placeholder {
+        font-size: 2.5vw;
+    }
+}
+/* LE ZONE DE TEXTE */
+.spid-cont-apropos-rouge textarea {
+    border: 1px solid var(--primary-white);
+    border-radius: 16px;
+    margin-bottom: 12px;
+    background-color: transparent;
+    width: 85%;
+    height: 100px;
+    /* CONTENU DU TEXTAREA */
+    color: var(--primary-white);
+    font-size: 1.5vw;
+    opacity: 0.7;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+@media (max-width: 576px) {
+    .spid-cont-apropos-rouge textarea {
+        font-size: 2.5vw;
+        border: 2px solid var(--primary-white);
+    }
+}
+/* LE BOUTON */
+.spid-cont-apropos-rouge button {
+    border: 1px solid white;
+    height: 34px;
+    width: 35%;
+    border-radius: 13px;
+    padding: 2px;
+    font-size: 1.5vw;
+    color: white;
+    opacity: 0.8;
+}
+@media (max-width: 575.98px) {
+    .spid-cont-apropos-rouge button {
+        font-size: 2.2vw;
+    }
+    .spid-cont-apropos-rouge .desktop-btn {
+        display: none;
+    }
+}
+.spid-cont-apropos-rouge .mobile-btn {
+    background-color: white;
+    opacity: 0.8;
+    font-family: 'font-1B';
+    border-radius: 26px;
+    color: var(--primary-red);
+    padding: 2%;
+    height: auto;
+}
+@media (min-width: 576px) {
+    .spid-cont-apropos-rouge .mobile-btn {
+        display: none;
+    }
+}
+/* PARTIE BLEUE : SAYNA X MARVEL */
+.spid-cont-apropos-bleue, .spid-cont-apropos-desktop-bleue, .spid-cont-apropos-mobile-bleue{
+    background-color: var(--primary-dark-blue);
+    margin-left: 0%;
+}
+
+/* LES TITRES */
+.spid-cont-apropos-bleue h2{
+    font-family: 'font-2';
+    font-size: 3vw;
+    color: var(--primary-white);
+    text-align: start;
+    padding-left: 4%;
+}
+@media (max-width: 575.98px) {
+    .spid-cont-apropos-bleue h2 {
+        text-align: center;
+        padding-left: 0%;
+    }
+}
+.spid-cont-apropos-desktop-bleue h3 {
+    font-family: 'font-1R';
+    font-size: 1.5vw;
+    font-weight: 100;
+    color: var(--primary-white);
+    text-align: start;
+    padding-left: 4%;
+    opacity: 0.8;
+}
+@media (max-width: 575.98px) {
+    .spid-cont-apropos-desktop-bleue h3 {
+        display: none;
+    }
+}
+/* LE PARAGRAPHE */
+.spid-cont-apropos-bleue p {
+    font-family: 'font-1R';
+    font-size: 1.5vw;
+    color: var(--primary-white);
+    opacity: 0.8;
+    text-align: justify;
+    margin-bottom: 48px;
+}
+@media (max-width: 575.98px) {
+    .spid-cont-apropos-bleue p {
+        text-align: center;
+        margin-bottom: 0;
+        opacity: 0.7;
+    }
+}
+/* LA LISTE */
+.liste ul li::marker {
+    font-family: 'font-1R';
+    color: var(--primary-white);
+    font-size: 1.5vw;
+    opacity: 0.8;
+}
+.liste ul li {
+    font-family: 'font-1R';
+    color: var(--primary-white);
+    font-size: 1.5vw;
+    opacity: 0.8;
+}
+.liste ul {
+    padding-left: 16px;
+}
+@media (max-width: 575.98px) {
+    .liste ul li {
+        text-align: center;
+        list-style-position: inside;
+    }
+    .liste ul {
+        padding-left: 0px;
+        text-align: center;
+    }
+}
+/* LE BOUTON */
+/* VERSION DESKTOP */
+.spid-cont-apropos-desktop-bleue .buttons, .spid-cont-apropos-mobile-bleue .button2 {
+    justify-content: space-around;
+    display: flex;
+    margin-bottom: 4%;
+}
+.spid-cont-apropos-desktop-bleue button, .spid-cont-apropos-mobile-bleue button {
+    border: 1px solid white;
+    height: 34px;
+    width: 35%;
+    border-radius: 13px;
+    padding: 2px;
+    font-size: 1.5vw;
+    color: white;
+    opacity: 0.8;
+    margin: 0%;
+}
+@media (min-width: 576px) {
+    .spid-cont-apropos-mobile-bleue {
+        display: none;
+    }
+}
+
+/* VERSION MOBILE */
+@media (max-width: 575.98px) {
+    .spid-cont-apropos-desktop-bleue {
+        display: none;
+    }
+    .spid-cont-apropos-mobile-bleue button {
+        width: 61%;
+        margin: 0% auto;
+    }
+    .spid-cont-apropos-mobile-bleue .button2 {
+        text-align: end;
+        display: block;
+    }
+}
